modify codemirror to display checkboxes infront of line

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <script type="application/javascript" src="javascripts/checkTask.js"></script>
   <script type="application/javascript" src="javascripts/updateOutput.js"></script>
   <script type="application/javascript" src="javascripts/file.js"></script>
+  <script type="application/javascript" src="javascripts/checkbox.js"></script>
   <script type="application/javascript" src="javascripts/javascript.js"></script>
   <script type="application/javascript" src="codemirror/addon/hint/show-hint.js"></script>
   <script type="application/javascript" src="codemirror/addon/hint/xml-hint.js"></script>
