--- a/javascripts/webpage/index.html
+++ b/javascripts/webpage/index.html
@@ -1,33 +1,65 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Checkbox Strikethrough</title>
-	<style>
-		label {
-			display: block;
-		}
-		.strikethrough {
-			text-decoration: line-through;
-		}
-	</style>
+  <title>Tab Switching Example</title>
+  <style>
+    .tab-button {
+      padding: 10px;
+      margin-right: 5px;
+      background-color: #f2f2f2;
+      border: none;
+      cursor: pointer;
+    }
+
+    .tab-button.active {
+      background-color: #ccc;
+    }
+
+    .tab-pane {
+      display: none;
+      padding: 20px;
+      border: 1px solid #ccc;
+    }
+
+    .tab-pane.active {
+      display: block;
+    }
+  </style>
 </head>
 <body>
-	<label>
-		<input type="checkbox" id="myCheckbox"> 
-		Some text here
-	</label>
-	
-	<script>
-		const checkbox = document.getElementById('myCheckbox');
-		const text = checkbox.parentNode;
-		
-		checkbox.addEventListener('change', function() {
-			if (this.checked) {
-				text.classList.add('strikethrough');
-			} else {
-				text.classList.remove('strikethrough');
-			}
-		});
-	</script>
+  <button id="tabButton1" class="tab-button active">Tab 1</button>
+  <button id="tabButton2" class="tab-button">Tab 2</button>
+  <button id="tabButton3" class="tab-button">Tab 3</button>
+
+  <div id="tabPane1" class="tab-pane active">This is the first tab</div>
+  <div id="tabPane2" class="tab-pane">This is the second tab</div>
+  <div id="tabPane3" class="tab-pane">This is the third tab</div>
+
+  <script>
+    // Get the tab buttons and panes by their IDs
+    var tabButtons = document.querySelectorAll('.tab-button');
+    var tabPanes = document.querySelectorAll('.tab-pane');
+
+    // Add click event listener to each tab button
+    tabButtons.forEach(function(button) {
+      button.addEventListener('click', function() {
+        // Get the target pane ID based on the clicked button
+        var targetPaneId = this.id.replace('tabButton', 'tabPane');
+
+        // Remove 'active' class from all tab buttons and panes
+        tabButtons.forEach(function(button) {
+          button.classList.remove('active');
+        });
+
+        tabPanes.forEach(function(pane) {
+          pane.classList.remove('active');
+        });
+
+        // Add 'active' class to the clicked tab button and pane
+        this.classList.add('active');
+        document.getElementById(targetPaneId).classList.add('active');
+      });
+    });
+  </script>
 </body>
 </html>
